# cheatsheets

./: .gitmodules  README.md
C/: format_string.md
C++/: casting.md
android/: emulators.md
build-tools/: cmake.md
compilers/: gcc.md  lex_and_yacc.md
crypto/: P07B.AES_detailed.ppt  checksum.md  des.md  diff_dist_table.py  expansion.py  nc.md  p_inverse.py  ref.md
ctf/: ctf-tools.md  lessons-learned.md
dev/: cov.md  gcov_related.md
dev/llvm/src/: CMakeLists.txt  jit-example.cpp
driving/: tips.md
editors/: latex.md  markdown.md  vim.md
gdb/: scripting-gdb.md  template.py  using_gdb.md
hw/: usb.md
issues/: Linux.md
linux-kernel/: Makefile.md  cgroup.md  config.md  debugging.md  io_models.md  official_doc.md  symbol-management.md  tracing.md  udev.md  vm.md
math/: matlab_usage.md  octave_usage.md
network/: bridge.md  dig.md  ip.md  iptables.md  netcat.md  netstat.md  nfs.md  nmap.md  port-knocking.md  route.md  tcpdump.md  tun_tap.md
openssl/: openssl.md
perl/: default_variable.md  string.md
personal/: kernel_dev.md
programming-language/: courses.md
python/: Module.md  dict.md  iterators_generators.md  list.md  string.md  tools.md
scripts/: create-image.sh
sec/: fortification.md  kali_linux.md  library.md
sql/: mysql.md  sql_injection.md  sqlite.md
sys-tools/: Git.md  apt.md  celery.cfg  celery.service  chef.md  deb.md  diff.md  dynamic_loader.md  gdb.md  init-systemd.md  kubernetes.md  linux-tracers.md  packages.md  parted.md  pssh.md  rabbitmq.md  ssh.md  virt-net.md
tmux/: tmux-others.md  tmux-tips.md  tmux.md
(+338 files in other folders)
